[package]
name = "snipecon-ebpf"
version = "0.1.0"
edition = "2021"

# This package compiles for bpfel-unknown-none (bare metal, no_std).
# Do NOT add any dependencies that require std (tokio, mio, reqwest, socket2, etc.)

[dependencies]
aya-ebpf = { version = "0.1", default-features = false }
aya-log-ebpf = { version = "0.1", default-features = false }

[lib]
name = "snipecon_ebpf"
crate-type = ["cdylib"]
