[package]
name = "snipecon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snipecon"
path = "src/main.rs"

[dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = { version = "0.2" }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
